--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <table width="1000" border="1" style="text-align:center; font-size:20px">
     <tr>
-        <td width="500">@Html.ActionLink("Dodaj školu", "Create", "Skola")</td>
-        <td>@Html.ActionLink("Dodaj djelatnika", "Create", "Djelatniks")</td>
+        <td width="500">@Html.ActionLink("Škole", "Index", "Skola")</td>
+        <td>@Html.ActionLink("Djelatnici", "Index", "Djelatniks")</td>
     </tr>
 </table>
