--- a/Views/Djelatniks/Delete.cshtml
+++ b/Views/Djelatniks/Delete.cshtml
@@ -56,7 +56,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index", "Home")
+            @Html.ActionLink("Povratak", "Index")
         </div>
     }
 </div>
