--- a/Views/Djelatniks/Index.cshtml
+++ b/Views/Djelatniks/Index.cshtml
@@ -4,9 +4,12 @@
     ViewBag.Title = "Index";
 }
 <br />
-<p>
-    @Html.ActionLink("Dodaj novog djelatnika", "Create")
-</p>
+@if (User.IsInRole("Admin"))
+{
+    <p>
+        @Html.ActionLink("Dodaj novog djelatnika", "Create")
+    </p>
+}
 @using (Html.BeginForm())
 {
     @Html.TextBox("search")
@@ -28,7 +31,10 @@
             @Html.DisplayNameFor(model => model.Zanimanje)
         </th>
         <th>Škola</th>
-        <th>Actions</th>
+        @if (User.IsInRole("Admin"))
+        {
+            <th>Actions</th>
+        }
     </tr>
     @if (Model.Count() == 0)
     {
@@ -60,10 +66,13 @@
                 <td>
                     @Html.Partial("_DeleteSkoleNames")
                 </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-                </td>
+                @if (User.IsInRole("Admin"))
+                {
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                    </td>
+                }
 
             </tr>
         }
