--- a/Views/Djelatnik/Create.cshtml
+++ b/Views/Djelatnik/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Dodavanje novog djelatnika</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Djelatnik", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -45,12 +45,19 @@
             </div>
         </div>
 
-        <div>
-            Škola:
-            <div>
+        <div class="form-group">
+            @Html.Label("Škola", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
                 <ul>
                     @Html.Partial("_AllSkola")
                 </ul>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.SlikaPath, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" name="SlikaFile" />
             </div>
         </div>
 
