--- a/Views/Djelatnik/Details.cshtml
+++ b/Views/Djelatnik/Details.cshtml
@@ -1,12 +1,14 @@
 ﻿@model SkolaProjekt.Models.Djelatnik
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
 }
-<h3>Jeste li sigurni da želite obrisati djelatnika?</h3>
+
+<h2>Detalji</h2>
 
 <div>
     <img src="@Url.Content(Model.SlikaPath)" width="100" height="100" alt="Nema slike" />
+    <br />
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -40,22 +42,12 @@
         <dd>
             @Html.DisplayFor(model => model.Zanimanje)
         </dd>
-        <dt>
-            Škola
-        </dt>
-        <dd>
-            @Html.Partial("_DeleteSkoleNames")
-        </dd>
-
     </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Povratak", "Index")
-        </div>
-    }
 </div>
+<p>
+    @if (User.IsInRole("Admin"))
+    {
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) <text> | </text>
+    }
+    @Html.ActionLink("Povratak", "Index")
+</p>
