--- a/Views/Shared/_AllSkola.cshtml
+++ b/Views/Shared/_AllSkola.cshtml
@@ -1,4 +1,4 @@
 ﻿@foreach (var item in ViewBag.Skole)
 {
-    <li> <input type="checkbox" name="SkolaID" value="@item.ID" style="list-style:none"/> @item.Naziv</li>
+    <li style="list-style:none"> <input type="checkbox" name="SkolaID" value="@item.ID" /> @item.Naziv</li>
 }
